Colaboratory를 통해 생성됨

--- a/Project_PSD200k_pynb.ipynb
+++ b/Project_PSD200k_pynb.ipynb
@@ -1028,6 +1028,48 @@
     {
       "cell_type": "code",
       "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VWholDIRkatV",
+        "outputId": "584175b2-7bd4-4ffb-b57b-a490ee6b322c"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Save Sr90_X to a CSV file in /content/drive/MyDrive/\n",
+        "np.savetxt('/content/drive/MyDrive/PSD-Project/Sr90_X.csv', Sr90_X, delimiter=',')\n",
+        "\n",
+        "# Save Cs137_X to a CSV file in /content/drive/MyDrive/\n",
+        "np.savetxt('/content/drive/MyDrive/PSD-Project/Cs137_X.csv', Cs137_X, delimiter=',')\n",
+        "\n",
+        "# Save Bi207_X to a CSV file in /content/drive/MyDrive/\n",
+        "np.savetxt('/content/drive/MyDrive/PSD-Project/Bi207_X.csv', Bi207_X, delimiter=',')"
+      ],
+      "metadata": {
+        "id": "TsUCtSORjMP2"
+      },
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Sr90_Y = np.full(51433, 90, dtype=np.int32)\n",
         "# Cs137_Y = np.full(55469, 137, dtype=np.int32)\n",
         "# Bi207_Y = np.full(47629, 207, dtype=np.int32)\n",
@@ -1507,26 +1549,22 @@
       ],
       "metadata": {
         "id": "Rfo4KbDbYKBV",
-        "outputId": "e1f3f76b-a97c-45a8-892a-7cdba6aefb2c",
+        "outputId": "84f9db1c-3695-47b5-cc4f-6d2180102af8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0.07736184, 0.01802458, 0.01510296, 0.00869544, 0.00600332,\n",
-              "       0.00596662, 0.03482818, 0.04380494, 0.06943334, 0.01261379,\n",
-              "       0.00967305, 0.00679765, 0.00786501, 0.01098043, 0.03945536,\n",
-              "       0.02417159, 0.04701543, 0.06573405, 0.01122239, 0.11044401,\n",
-              "       0.13301504, 0.16085175, 0.08093923])"
+              "array([0.33976648, 0.31363427, 0.29415483, 0.05244442])"
             ]
           },
           "metadata": {},
-          "execution_count": 450
+          "execution_count": 41
         }
       ]
     },
