Colaboratory를 통해 생성됨

--- a/Geo_Project_PSD_pynb.ipynb
+++ b/Geo_Project_PSD_pynb.ipynb
@@ -1061,13 +1061,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 213,
+      "execution_count": 246,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "fBzp-59fyxTF",
-        "outputId": "294f29f4-e95c-492a-ed11-378acdc3f1ac"
+        "outputId": "7347d6e8-e19f-480e-883c-b35bb8887ed7"
       },
       "outputs": [
         {
@@ -1078,7 +1078,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 213
+          "execution_count": 246
         }
       ],
       "source": [
@@ -1088,13 +1088,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 214,
+      "execution_count": 247,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7zBCRjHCy4yn",
-        "outputId": "a3ddce42-bb12-4a35-dcb3-2b268afac498"
+        "outputId": "7cf730d2-0347-4338-ed04-627d72240056"
       },
       "outputs": [
         {
@@ -1105,7 +1105,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 214
+          "execution_count": 247
         }
       ],
       "source": [
@@ -1124,7 +1124,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 215,
+      "execution_count": 248,
       "metadata": {
         "id": "okUPbVzkMHNs"
       },
@@ -1138,7 +1138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 216,
+      "execution_count": 249,
       "metadata": {
         "id": "DWYzYt_kAQ_z"
       },
@@ -1147,18 +1147,18 @@
         "rnd_clf = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=64, random_state=42)\n",
         "rnd_clf.fit(X_train, y_train)\n",
         "\n",
-        "y_pred3 = rnd_clf.predict(X_test)"
+        "y_pred1 = rnd_clf.predict(X_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 217,
+      "execution_count": 250,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "n3vESodmAWzR",
-        "outputId": "62c762bd-027c-44f0-8821-525ecca728ea"
+        "outputId": "23b4a063-90a5-4d70-b68a-17c4541981bb"
       },
       "outputs": [
         {
@@ -1171,12 +1171,12 @@
       ],
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "print(accuracy_score(y_test, y_pred3))"
+        "print(accuracy_score(y_test, y_pred1))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 218,
+      "execution_count": 251,
       "metadata": {
         "id": "DquKA43JuEBJ"
       },
@@ -1185,18 +1185,18 @@
         "rnd_clf = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=5000, random_state=42)\n",
         "rnd_clf.fit(X_train, y_train)\n",
         "\n",
-        "y_pred9 = rnd_clf.predict(X_test)"
+        "y_pred2 = rnd_clf.predict(X_test)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 219,
+      "execution_count": 252,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JMDd_F5cuJA1",
-        "outputId": "c169160c-cf47-4d63-ce77-c2a732bb6f21"
+        "outputId": "6c06f6bb-dfc5-4a20-a466-cfc6f98d8577"
       },
       "outputs": [
         {
@@ -1209,7 +1209,7 @@
       ],
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "print(accuracy_score(y_test, y_pred9))"
+        "print(accuracy_score(y_test, y_pred2))"
       ]
     },
     {
@@ -1223,25 +1223,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 220,
+      "execution_count": 253,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 467
         },
         "id": "K5uttgiAfEMy",
-        "outputId": "ade4a46f-dfc0-419f-a5ed-59e272234576"
+        "outputId": "ffea4e36-48fe-45d9-98c1-21fbf4e4fff0"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fb5607b56a0>"
+              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fb54ac7cd60>"
             ]
           },
           "metadata": {},
-          "execution_count": 220
+          "execution_count": 253
         },
         {
           "output_type": "display_data",
@@ -1262,7 +1262,7 @@
         "\n",
         "\n",
         "# Compute the confusion matrix\n",
-        "cm = confusion_matrix(y_test, y_pred9)\n",
+        "cm = confusion_matrix(y_test, y_pred2)\n",
         "\n",
         "# Normalize the confusion matrix to show the probability values\n",
         "cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
@@ -1394,9 +1394,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nMAourgzRNh1",
-        "outputId": "939367bf-4d74-4b70-c9b2-43076dc0c60e"
+        "outputId": "e2b10dc5-88fb-45de-c673-6142cadbfd3b"
       },
-      "execution_count": 225,
+      "execution_count": 254,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1406,34 +1406,34 @@
             ]
           },
           "metadata": {},
-          "execution_count": 225
+          "execution_count": 254
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "X = X[:,:2]"
+        "X2 = X[:,:2]"
       ],
       "metadata": {
         "id": "DOMRj-cmRZgX"
       },
-      "execution_count": 226,
+      "execution_count": 255,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "X.shape"
+        "X2.shape"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "swhaY0CrRcK1",
-        "outputId": "8a827687-e902-4730-bf9f-c75df2acc84d"
+        "outputId": "59bac2ff-37a8-451c-eefd-d7705fa56fe1"
       },
-      "execution_count": 227,
+      "execution_count": 256,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1443,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 227
+          "execution_count": 256
         }
       ]
     },
@@ -1453,42 +1453,42 @@
         "from sklearn.model_selection import train_test_split\n",
         "#from sklearn.datasets import make_moons\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+        "X2_train, X2_test, y_train, y_test = train_test_split(X2, y, random_state=42)"
       ],
       "metadata": {
         "id": "KJDbyq0vRdVr"
       },
-      "execution_count": 228,
+      "execution_count": 257,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "rnd_clf = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=5000, random_state=42)\n",
-        "rnd_clf.fit(X_train, y_train)\n",
+        "rnd_clf.fit(X2_train, y_train)\n",
         "\n",
-        "y_pred9 = rnd_clf.predict(X_test)"
+        "y_pred3 = rnd_clf.predict(X2_test)"
       ],
       "metadata": {
         "id": "iBPD1IHERrmK"
       },
-      "execution_count": 231,
+      "execution_count": 258,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "from sklearn.metrics import accuracy_score\n",
-        "print(accuracy_score(y_test, y_pred9))"
+        "print(accuracy_score(y_test, y_pred3))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6G1vFhbiRvtG",
-        "outputId": "c60411fe-07da-4beb-f15f-f6cba37a3fb3"
+        "outputId": "fd98514e-00f9-427e-d25c-25d1a96624b8"
       },
-      "execution_count": 232,
+      "execution_count": 259,
       "outputs": [
         {
           "output_type": "stream",
@@ -1509,7 +1509,7 @@
         "\n",
         "\n",
         "# Compute the confusion matrix\n",
-        "cm = confusion_matrix(y_test, y_pred9)\n",
+        "cm = confusion_matrix(y_test, y_pred3)\n",
         "\n",
         "# Normalize the confusion matrix to show the probability values\n",
         "cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
@@ -1526,19 +1526,19 @@
           "height": 467
         },
         "id": "JLLP34GgRytC",
-        "outputId": "dd9b7fff-7c77-4ffd-f54c-9ffbc0917071"
+        "outputId": "d0b3b43c-e3c2-4274-c385-26ef62fb087f"
       },
-      "execution_count": 233,
+      "execution_count": 260,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fb46071f9a0>"
+              "<sklearn.metrics._plot.confusion_matrix.ConfusionMatrixDisplay at 0x7fb45f91a430>"
             ]
           },
           "metadata": {},
-          "execution_count": 233
+          "execution_count": 260
         },
         {
           "output_type": "display_data",
@@ -1572,9 +1572,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "40No1th5dp2a",
-        "outputId": "e7b22096-283d-4745-f47a-93ac29550c66"
+        "outputId": "a3ec4a87-ad84-4bbb-93c5-4c092b2f3a5d"
       },
-      "execution_count": 234,
+      "execution_count": 261,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1584,7 +1584,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 234
+          "execution_count": 261
         }
       ]
     },
@@ -1620,7 +1620,7 @@
       "metadata": {
         "id": "Cxw0YNR9dhXG"
       },
-      "execution_count": 240,
+      "execution_count": 262,
       "outputs": []
     },
     {
@@ -1636,19 +1636,19 @@
       "cell_type": "code",
       "source": [
         "# add new columns to X\n",
-        "X = np.column_stack((X, ratio15, ratio16, ratio17, ratio18))\n",
+        "X3 = np.column_stack((X, ratio15, ratio16, ratio17, ratio18))\n",
         "\n",
-        "# verify new shape of X\n",
-        "print(X.shape)"
+        "# verify new shape of X3\n",
+        "print(X3.shape)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ReS-6UDFCtL7",
-        "outputId": "38f75c43-d57f-4adc-9b09-d4e95d89ef5d"
+        "outputId": "c71c8a6a-e12a-4be7-a4be-652493c85c1e"
       },
-      "execution_count": 241,
+      "execution_count": 263,
       "outputs": [
         {
           "output_type": "stream",
@@ -1665,31 +1665,31 @@
         "from sklearn.model_selection import train_test_split\n",
         "#from sklearn.datasets import make_moons\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)"
+        "X3_train, X3_test, y_train, y_test = train_test_split(X3, y, random_state=42)"
       ],
       "metadata": {
         "id": "RReVdUqfhS5C"
       },
-      "execution_count": 242,
+      "execution_count": 264,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "rnd_clf = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=64, random_state=42)\n",
-        "rnd_clf.fit(X_train, y_train)\n",
+        "rnd_clf3 = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=64, random_state=42)\n",
+        "rnd_clf3.fit(X3_train, y_train)\n",
         "\n",
-        "y_pred3 = rnd_clf.predict(X_test)\n",
-        "print(accuracy_score(y_test, y_pred3))"
+        "y_pred4 = rnd_clf3.predict(X3_test)\n",
+        "print(accuracy_score(y_test, y_pred4))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7TEA-BDpfGZR",
-        "outputId": "1a6eea66-8f2f-4e72-e8db-9d1379056a47"
+        "outputId": "a2a4177d-4d11-42e1-ecda-449540c0c484"
       },
-      "execution_count": 243,
+      "execution_count": 268,
       "outputs": [
         {
           "output_type": "stream",
@@ -1703,20 +1703,20 @@
     {
       "cell_type": "code",
       "source": [
-        "rnd_clf = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=5000, random_state=42)\n",
-        "rnd_clf.fit(X_train, y_train)\n",
+        "rnd_clf3 = RandomForestClassifier(n_estimators=1000, max_leaf_nodes=5000, random_state=42)\n",
+        "rnd_clf3.fit(X3_train, y_train)\n",
         "\n",
-        "y_pred9 = rnd_clf.predict(X_test)\n",
-        "print(accuracy_score(y_test, y_pred9))"
+        "y_pred5 = rnd_clf3.predict(X3_test)\n",
+        "print(accuracy_score(y_test, y_pred5))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "V7rmQUh_fGZT",
-        "outputId": "2a90959e-974d-4a33-b9ce-d65e6eb7cd66"
+        "outputId": "7e07f85d-60ff-4610-ca84-4a8968317361"
       },
-      "execution_count": 244,
+      "execution_count": 269,
       "outputs": [
         {
           "output_type": "stream",
@@ -1730,16 +1730,16 @@
     {
       "cell_type": "code",
       "source": [
-        "rnd_clf.feature_importances_"
+        "rnd_clf3.feature_importances_"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tG6ofPoMfIjM",
-        "outputId": "527fd626-c797-4f3f-df85-e86c31f97b0a"
+        "outputId": "c8a8a311-efb1-46d3-a68b-5cfa44936e8d"
       },
-      "execution_count": 245,
+      "execution_count": 270,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1750,9 +1750,81 @@
             ]
           },
           "metadata": {},
-          "execution_count": 245
+          "execution_count": 270
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 5 cols vs extended cols with high cupting power"
+      ],
+      "metadata": {
+        "id": "sXDamg3BLtEX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rnd_clf3 = RandomForestClassifier(n_estimators=10000, max_leaf_nodes=50000, random_state=42)\n",
+        "rnd_clf3.fit(X3_train, y_train)\n",
+        "\n",
+        "y_pred6 = rnd_clf3.predict(X3_test)\n",
+        "print(accuracy_score(y_test, y_pred6))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LtTxd2Z1LFlt",
+        "outputId": "f6aa546a-ffbb-427f-bb94-9abff383d1f5"
+      },
+      "execution_count": 271,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9668368794326241\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rnd_clf = RandomForestClassifier(n_estimators=10000, max_leaf_nodes=50000, random_state=42)\n",
+        "rnd_clf.fit(X_train, y_train)\n",
+        "\n",
+        "y_pred7 = rnd_clf.predict(X_test)\n",
+        "print(accuracy_score(y_test, y_pred7))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-7QFtSHDLk6C",
+        "outputId": "939c816a-1c10-4ba5-d85c-6a828c25f73f"
+      },
+      "execution_count": 272,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.9793758865248227\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "NRAewk-lMxPE"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
