Colaboratory를 통해 생성됨

--- a/PSD_auto(Qratio).ipynb
+++ b/PSD_auto(Qratio).ipynb
@@ -90,9 +90,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hEDkGHufx3bv",
-        "outputId": "ba889a00-8bc5-4753-922e-92237f611060"
+        "outputId": "3a339c2b-9863-4519-bf27-7f2beb10919b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3004,6 +3004,60 @@
     {
       "cell_type": "code",
       "source": [
+        "Sr90_X = Sr90\n",
+        "Cs137_X = Cs137\n",
+        "Bi207_X = Bi207\n",
+        "\n",
+        "Sr90_X_mask = Sr90_X[:, 0] < -150\n",
+        "Sr90_X = Sr90_X[~Sr90_X_mask]\n",
+        "print(Sr90_X.shape)\n",
+        "\n",
+        "Cs137_X_mask = Cs137_X[:, 0] < -40\n",
+        "Cs137_X = Cs137_X[~Cs137_X_mask]\n",
+        "print(Cs137_X.shape)\n",
+        "\n",
+        "Bi207_X_mask = Bi207_X[:, 0] < -120\n",
+        "Bi207_X = Bi207_X[~Bi207_X_mask]\n",
+        "print(Bi207_X.shape)\n",
+        "\n",
+        "Sr90_X_mask2 = Sr90_X[:, 1] < -1500\n",
+        "Sr90_X = Sr90_X[~Sr90_X_mask2]\n",
+        "print(Sr90_X.shape)\n",
+        "\n",
+        "Cs137_X_mask2 = Cs137_X[:, 1] < -1500\n",
+        "Cs137_X = Cs137_X[~Cs137_X_mask2]\n",
+        "print(Cs137_X.shape)\n",
+        "\n",
+        "Bi207_X_mask2 = Bi207_X[:, 1] < -1500\n",
+        "Bi207_X = Bi207_X[~Bi207_X_mask2]\n",
+        "print(Bi207_X.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "bf757c85-9b6b-4fb9-96a3-7453d6e38e05",
+        "id": "YOp7rCzoUlvT"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(19992, 25)\n",
+            "(19940, 25)\n",
+            "(19999, 25)\n",
+            "(19986, 25)\n",
+            "(19940, 25)\n",
+            "(19998, 25)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "from scipy.optimize import curve_fit\n",
         "import matplotlib.pyplot as plt\n",
@@ -3096,9 +3150,9 @@
           "height": 749
         },
         "id": "zvrADsYPfncj",
-        "outputId": "ee5a7ff8-142e-4d3f-c97f-897759d58dfe"
+        "outputId": "27378137-1693-4056-c9c7-b6360fb1e9a4"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "display_data",
